[package]
name = "uniswap_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "dfbf61ceb23bc321afa6d0dbce913d744ab25568" }
# near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "dfbf61ceb23bc321afa6d0dbce913d744ab25568" }
uint = { version = "0.9.0", default-features = false }